tests/bad_string.stderr
tests/bad_string.sl:2:15: error: SL1002: unterminated string literal
