tests/bad_string.sl
// Verifies bad string.
const x str = "oops
